IRB-012 : Add view invoice endpoint
